--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
-    "supertest-session": "^4.1.0"
+    "supertest-session": "^4.1.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
 }
